...
                                <viewLayoutGuide key="safeArea" id="PJN-Oc-KhX"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" backgroundImage="envelope" catalog="system"/>
                                <connections>
                                    <action selector="emailButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bJX-l2-5qp"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="£" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxY-6B-Qkf">
                                                    <rect key="frame" x="326.66666666666669" y="11.666666666666664" width="11" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mHb-vD-WSY">
                                        <rect key="frame" x="20" y="42.666666666666629" width="335" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="placeTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="34" id="aDc-Km-2dA"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20/08/2019" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4L5-nO-PLR">
                                                        <rect key="frame" x="0.0" y="22.666666666666746" width="167" height="34.333333333333343"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="dateTextField"/>
                                                        <color key="textColor" red="0.24313725489999999" green="0.32156862749999998" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
...
                                </textAttributes>
                                <items>
                                    <navigationItem title="Payment Details" id="1DN-QI-oPa">
                                        <leftBarButtonItems>
                                            <barButtonItem title="return" image="chevron.left" catalog="system" id="gkD-Cs-HIA">
...
                                                </connections>
                                            </barButtonItem>
                                            <barButtonItem title="save to photos" image="square.and.arrow.down" catalog="system" id="BFW-pn-e1x">
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <connections>
...
