...
                    <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                </view>
                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eiW-No-abH">
                    <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                    <color key="barTintColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <items>
                        <navigationItem title="PDF Preview" id="9yB-Bv-WsM">
                            <barButtonItem key="leftBarButtonItem" image="xmark" catalog="system" id="eN6-pB-rxH">
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <action selector="closeButtonPressed:" destination="-1" id="gX6-hR-pk3"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem key="rightBarButtonItem" title="send" image="square.and.arrow.up" catalog="system" id="sBV-FW-sff">
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <action selector="sendEmailButtonPressed:" destination="-1" id="3q1-cN-WWv"/>
                                </connections>
                            </barButtonItem>
                        </navigationItem>
...
